tests/baselines/reference/parserModuleDeclaration4.d.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ModuleDeclarations/parserModuleDeclaration4.d.ts (2 errors) ====
    module M {
    ~~~~~~
!!! error TS1046: A 'declare' modifier is required for a top level declaration in a .d.ts file.
      declare module M1 {
      ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
      }
    }